[gd_scene load_steps=7 format=3 uid="uid://duclwubyc7yvl"]

[ext_resource type="Script" path="res://Content/UI/Overworld/GD_MapLocation.gd" id="1_ls4oy"]
[ext_resource type="Shader" path="res://Content/UI/Overworld/M_PlanetButton.gdshader" id="1_y5cl2"]
[ext_resource type="Gradient" uid="uid://bsh5jlaubyf8f" path="res://Content/Art/Environments/EnvironmentThemes/G_EnvironmentTheme_1.tres" id="2_xv57i"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3168x"]
gradient = ExtResource("2_xv57i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qmk7q"]
resource_local_to_scene = true
shader = ExtResource("1_y5cl2")
shader_parameter/gradient = SubResource("GradientTexture1D_3168x")

[sub_resource type="ImageTexture" id="ImageTexture_nf50p"]

[node name="MapLocation" type="TextureButton"]
modulate = Color(0.901961, 0.901961, 0.901961, 1)
material = SubResource("ShaderMaterial_qmk7q")
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2(0.15, 0.15)
size_flags_horizontal = 3
texture_normal = SubResource("ImageTexture_nf50p")
script = ExtResource("1_ls4oy")

[connection signal="focus_entered" from="." to="." method="_on_hover"]
[connection signal="focus_exited" from="." to="." method="_goto_default"]
[connection signal="mouse_entered" from="." to="." method="_on_hover"]
[connection signal="mouse_exited" from="." to="." method="_goto_default"]
[connection signal="pressed" from="." to="." method="_write_meta"]
